Made loading the next four post work. Also made the form complete but get stuck on the handleSubmit that does not work. On to try to fix that and how to get page numbering on the blog page.

--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,5 +1,5 @@
 .container_cards {
-    width: 285px;
+    width: 261px;
     height: 217px;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
