--- a/src/Pages/BlogPage/Blog.module.css
+++ b/src/Pages/BlogPage/Blog.module.css
@@ -6,24 +6,18 @@ html{
 }
 .container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 1116px;
     height: 507px;
     margin: 64px 162px;
+    padding: 24px;
+    border: 2px solid steelblue;
 }
-.container_cards {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 24px;
-    width: 1116px;
-    height: 217px;
-    margin-top: 24px;
-}
+
 .container_cards__item {
-    width: 285px;
+    width: 261px;
     height: 217px;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
